syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.flowerlabvlada.customer.grpc";
option java_outer_classname = "CustomerProto";

package customer;

service CustomerGrpcService {
  rpc GetCustomerById (CustomerRequest) returns (CustomerResponse);
}

message CustomerRequest {
  int64 customerId = 1;
}

message CustomerResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
}